Fixed nav bar at 800 px
- CODE was too big and not matching it's other line items

--- a/what-is-code/style.css
+++ b/what-is-code/style.css
@@ -38,7 +38,7 @@ h2 {
     }
 
     @media (width > 800px) {
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
     
     @media (width > 1000px) {
